@@ -83,7 +83,7 @@ QString CLHelp::formatHelp(QString parameter, QString help, bool html) {
 QString CLHelp::help(bool html) {
 	QString app_name = QFileInfo(qApp->applicationFilePath()).baseName();
 
-	QString options = QString("%1 [-minigui] [-defaultgui] [-ini-path %2] "
+	QString options = QString("%1 [-minigui] [-defaultgui] [-config-path %2] "
                         "[-send-action %3] [-actions %4] "
                         "[-close-at-end] [-no-close-at-end] [-fullscreen] [-no-fullscreen] "
                         "[-sub %5] "
@@ -116,9 +116,9 @@ QString CLHelp::help(bool html) {
 	s += formatHelp( "-defaultgui", QObject::tr(
 		"opens the default gui."), html );
 
-	s += formatHelp( "-ini-path", QObject::tr(
-		"specifies the directory for the configuration file "
-        "(smplayer.ini)."), html );
+	s += formatHelp( "-config-path", QObject::tr(
+		"specifies the directory where smplayer will store its configuration "
+        "files (smplayer.ini, smplayer_files.ini...)"), html );
 
 	s += formatHelp( "-send-action", QObject::tr(
 		"tries to make a connection to another running instance "
